# Around_Me

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_ASSESSMENT.md  Dockerfile  LICENSE  README.md  SECURITY_ARCHITECTURE_REVIEW.md  app.py  build-multiarch.sh  config.py  deploy.sh  docker-compose.yml  download-weather-sat-samples.sh  ideas.md  install.sh  oui_database.json  package.json  pyproject.toml  requirements-dev.txt  requirements-jetson.txt  requirements.txt  setup.sh  valentine.py  valentine_agent.cfg  valentine_agent.py
.github/workflows/: ci.yml
client/: index.html
client/src/: App.tsx  const.ts  index.css  main.tsx
data/: __init__.py  oui.py  patterns.py
deploy/: Caddyfile  valentine-rf.env  valentine-rf.service
docs/: AUTH_ISSUES.md  DEPLOYMENT.md  DISTRIBUTED_AGENTS.md  FEATURES.md  HARDWARE.md  SECURITY.md  TEST_SUITE_REPAIR.md  TROUBLESHOOTING.md  UAT_INTEGRATION_GUIDE.md  UI_GUIDE.md  USAGE.md  _config.yml  index.html  style.css
installer/lib/: checks.sh
promo/: instagram-promo.html
routes/: __init__.py  acars.py  adsb.py  ais.py  alerts.py  analytics.py  aprs.py  audio_websocket.py  bluetooth.py  bluetooth_v2.py  bt_locate.py  controller.py  correlation.py  dmr.py  dsc.py  gps.py  listening_post.py  meshtastic.py  offline.py  pager.py  recordings.py  rtlamr.py  satellite.py  sensor.py  settings.py  space_weather.py  spy_stations.py  sstv.py  sstv_general.py  subghz.py  tscm.py  uat.py  updater.py  vdl2.py  views.py  waterfall_websocket.py  weather_sat.py  websdr.py  wifi.py  wifi_v2.py
static/css/: adsb_dashboard.css  adsb_history.css  agents.css  ais_dashboard.css  analytics_dashboard.css  bt_locate.css  geospatial.css  global-nav.css  history.css  index.css  responsive.css  satellite_dashboard.css  settings.css  space_weather.css  system_status.css  tscm_dashboard.css  weather_sat_dashboard.css  wifi_advanced.css
templates/: adsb_dashboard.html  adsb_history.html  agents.html  ais_dashboard.html  analytics_dashboard.html  bt_locate.html  change_password.html  geospatial.html  history.html  index.html  login.html  network_monitor.html  satellite_dashboard.html  space_weather.html  system_status.html  tscm_dashboard.html  weather_sat_dashboard.html  wifi_advanced.html
templates/layout/: base.html  base_dashboard.html
templates/partials/: help-modal.html  nav.html  settings-alerts-enhanced.html  (+2 more)
tests/: KNOWN_ISSUES.md  conftest.py  mock_agent.py  smoke_test_bluetooth.py  test_agent.py  test_agent_integration.py  test_agent_modes.py  test_app.py  test_bluetooth.py  test_bluetooth_aggregator.py  test_bluetooth_api.py  test_bluetooth_heuristics.py  test_bluetooth_proximity.py  test_config.py  test_controller.py  test_database.py  test_deauth_detector.py  test_dmr.py  test_dsc.py  test_dsc_database.py  test_meshtastic.py  test_requirements.py  test_routes.py  test_rtl_fm_modulation.py  test_satellite.py  test_signal_guess_api.py  test_sstv_decoder.py  test_tracker_signatures.py  test_uat.py  test_utils.py  test_validation.py  test_waterfall.py  test_weather_sat_decoder.py  test_weather_sat_predict.py  test_weather_sat_routes.py  test_weather_sat_scheduler.py  test_websdr.py  test_wifi.py
utils/: __init__.py  adsb_history.py  agent_client.py  aircraft_db.py  alerts.py  cleanup.py  constants.py  correlation.py  database.py  dependencies.py  gps.py  kiwisdr.py  logging.py  meshtastic.py  process.py  process_monitor.py  recording.py  safe_path.py  sse.py  trilateration.py  updater.py  validation.py  weather_sat.py  weather_sat_predict.py  weather_sat_scheduler.py
(+93 files in other folders)
